connectivity_monitor_nm_state_change_cb: if NM says DISCONNECTED, believe it

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=69585
Reviewed-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>